@@ -66,7 +66,6 @@ class GetSubcommandTest {
 
         int code = cmd.execute("topics");
         assertEquals(1, code);
-        assertTrue(sw.toString().contains("Login failed."));
     }
 
     @Test
@@ -81,7 +80,7 @@ class GetSubcommandTest {
 
         when(loginService.doAuthenticate(anyBoolean()))
                 .thenReturn(true);
-        when(apiResourcesService.getResourceDefinitionFromCommandName(any()))
+        when(apiResourcesService.getResourceDefinitionByCommandName(any()))
                 .thenReturn(Optional.of(apiResource));
 
         CommandLine cmd = new CommandLine(getSubcommand);
@@ -97,7 +96,7 @@ class GetSubcommandTest {
     void shouldNotGetWhenServerNotHaveResourceType() {
         when(loginService.doAuthenticate(anyBoolean()))
                 .thenReturn(true);
-        when(apiResourcesService.getResourceDefinitionFromCommandName(any()))
+        when(apiResourcesService.getResourceDefinitionByCommandName(any()))
                 .thenReturn(Optional.empty());
 
         CommandLine cmd = new CommandLine(getSubcommand);
@@ -122,7 +121,7 @@ class GetSubcommandTest {
         kafkactlCommand.optionalNamespace = Optional.of("namespace");
         when(loginService.doAuthenticate(anyBoolean()))
                 .thenReturn(true);
-        when(apiResourcesService.getResourceDefinitionFromCommandName(any()))
+        when(apiResourcesService.getResourceDefinitionByCommandName(any()))
                 .thenReturn(Optional.of(apiResource));
         HttpClientResponseException e = new HttpClientResponseException("error", HttpResponse.serverError());
         when(resourceService.getSingleResourceWithType(any(), any(), any(), anyBoolean()))
@@ -133,31 +132,6 @@ class GetSubcommandTest {
         int code = cmd.execute("topics", "myTopic");
         assertEquals(1, code);
         verify(formatService).displayError(e, "Topic", "myTopic", cmd.getCommandSpec());
-    }
-
-    @Test
-    void shouldNotGetWhenThrowException() {
-        ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
-
-        kafkactlCommand.optionalNamespace = Optional.of("namespace");
-        when(loginService.doAuthenticate(anyBoolean()))
-                .thenReturn(true);
-        when(apiResourcesService.getResourceDefinitionFromCommandName(any()))
-                .thenReturn(Optional.of(apiResource));
-        when(resourceService.getSingleResourceWithType(any(), any(), any(), anyBoolean()))
-                .thenThrow(new RuntimeException("error"));
-
-        CommandLine cmd = new CommandLine(getSubcommand);
-
-        int code = cmd.execute("topics", "myTopic");
-        assertEquals(1, code);
-        verify(formatService).displayError("Error getting resource type", "Topic", "myTopic", cmd.getCommandSpec());
     }
 
     @Test
@@ -182,7 +156,7 @@ class GetSubcommandTest {
         kafkactlCommand.optionalNamespace = Optional.of("namespace");
         when(loginService.doAuthenticate(anyBoolean()))
                 .thenReturn(true);
-        when(apiResourcesService.getResourceDefinitionFromCommandName(any()))
+        when(apiResourcesService.getResourceDefinitionByCommandName(any()))
                 .thenReturn(Optional.of(apiResource));
         when(resourceService.getSingleResourceWithType(any(), any(), any(), anyBoolean()))
                 .thenReturn(resource);
@@ -195,7 +169,7 @@ class GetSubcommandTest {
     }
 
     @Test
-    void shouldGetAllTopicsNoResourceToDisplay() {
+    void shouldGetAllTopicsSuccess() {
         ApiResource apiResource = ApiResource.builder()
                 .kind("Topic")
                 .path("topics")
@@ -207,10 +181,10 @@ class GetSubcommandTest {
         kafkactlCommand.optionalNamespace = Optional.of("namespace");
         when(loginService.doAuthenticate(anyBoolean()))
                 .thenReturn(true);
-        when(apiResourcesService.getResourceDefinitionFromCommandName(any()))
+        when(apiResourcesService.getResourceDefinitionByCommandName(any()))
                 .thenReturn(Optional.of(apiResource));
         when(resourceService.listAll(any(), any(), any()))
-                .thenReturn(Collections.singletonMap(apiResource, Collections.emptyList()));
+                .thenReturn(0);
 
         CommandLine cmd = new CommandLine(getSubcommand);
         StringWriter sw = new StringWriter();
@@ -218,41 +192,7 @@ class GetSubcommandTest {
 
         int code = cmd.execute("topics");
         assertEquals(0, code);
-        assertTrue(sw.toString().contains("No resource to display."));
-    }
-
-    @Test
-    void shouldGetAllTopics() {
-        ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
-
-        Resource resource = Resource.builder()
-                .kind("Topic")
-                .apiVersion("v1")
-                .metadata(ObjectMeta.builder()
-                        .name("prefix.topic")
-                        .build())
-                .spec(Collections.emptyMap())
-                .build();
-
-        kafkactlCommand.optionalNamespace = Optional.of("namespace");
-        when(loginService.doAuthenticate(anyBoolean()))
-                .thenReturn(true);
-        when(apiResourcesService.getResourceDefinitionFromCommandName(any()))
-                .thenReturn(Optional.of(apiResource));
-        when(resourceService.listAll(any(), any(), any()))
-                .thenReturn(Collections.singletonMap(apiResource, Collections.singletonList(resource)));
-
-        CommandLine cmd = new CommandLine(getSubcommand);
-
-        int code = cmd.execute("topics");
-        assertEquals(0, code);
-        verify(formatService).displayList("Topic", Collections.singletonList(resource), TABLE, cmd.getCommandSpec());
+        verify(resourceService).listAll(Collections.singletonList(apiResource), "namespace", cmd.getCommandSpec());
     }
 
     @Test
@@ -287,78 +227,15 @@ class GetSubcommandTest {
                 .thenReturn(true);
         when(kafkactlConfig.getCurrentNamespace())
                 .thenReturn("namespace");
-        when(apiResourcesService.getListResourceDefinition())
+        when(apiResourcesService.listResourceDefinitions())
                 .thenReturn(List.of(apiResource, nonNamespacedApiResource));
         when(resourceService.listAll(any(), any(), any()))
-                .thenReturn(Collections.singletonMap(apiResource, Collections.singletonList(resource)));
+                .thenReturn(0);
 
         CommandLine cmd = new CommandLine(getSubcommand);
 
         int code = cmd.execute("all");
         assertEquals(0, code);
-        verify(formatService).displayList("Topic", Collections.singletonList(resource), TABLE, cmd.getCommandSpec());
-    }
-
-    @Test
-    void shouldNotGetAllWhenHttpClientThrowException() {
-        ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
-
-        kafkactlCommand.optionalNamespace = Optional.empty();
-        when(loginService.doAuthenticate(anyBoolean()))
-                .thenReturn(true);
-        when(kafkactlConfig.getCurrentNamespace())
-                .thenReturn("namespace");
-        when(apiResourcesService.getListResourceDefinition())
-                .thenReturn(Collections.singletonList(apiResource));
-        HttpClientResponseException e = new HttpClientResponseException("error", HttpResponse.serverError());
-        when(resourceService.listAll(any(), any(), any()))
-                .thenThrow(e);
-
-        CommandLine cmd = new CommandLine(getSubcommand);
-
-        int code = cmd.execute("all");
-        assertEquals(1, code);
-        verify(formatService).displayError(e, "Topic", null, cmd.getCommandSpec());
-    }
-
-    @Test
-    void shouldNotGetAllWhenThrowException() {
-        ApiResource apiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(true)
-                .synchronizable(true)
-                .build();
-
-        ApiResource nonNamespacedApiResource = ApiResource.builder()
-                .kind("Topic")
-                .path("topics")
-                .names(List.of("topics", "topic", "to"))
-                .namespaced(false)
-                .synchronizable(true)
-                .build();
-
-        kafkactlCommand.optionalNamespace = Optional.empty();
-        when(loginService.doAuthenticate(anyBoolean()))
-                .thenReturn(true);
-        when(kafkactlConfig.getCurrentNamespace())
-                .thenReturn("namespace");
-        when(apiResourcesService.getListResourceDefinition())
-                .thenReturn(List.of(apiResource, nonNamespacedApiResource));
-        when(resourceService.listAll(any(), any(), any()))
-                .thenThrow(new RuntimeException("error"));
-
-        CommandLine cmd = new CommandLine(getSubcommand);
-
-        int code = cmd.execute("all");
-        assertEquals(1, code);
-        verify(formatService).displayError("Error getting resource type", "Topic", null, cmd.getCommandSpec());
+        verify(resourceService).listAll(Collections.singletonList(apiResource), "namespace", cmd.getCommandSpec());
     }
 }
